@@ -1,3 +1,12 @@
+2010-07-06  Murray Cumming  <murrayc@murrayc.com>
+
+	Add Region, wrapping cairo_region_t, new in cairo 1.10.
+
+	* cairomm/region.[h|cc]: Added this class, wrapping it like other
+    reference-counted types, such as Pattern.
+    * cairomm/cairomm.h: Add an include of it here.
+    * cairomm/filelist.am: Mention the new files here.
+
 2010-06-07  Daniel Elstner  <danielk@openismus.com>
 
 	Disallow copying of Cairo::Context objects
